[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-analytics-tools"
version = "1.0.0"
description = "A toolkit for data cleanup, synthetic data generation, and visualization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DataAnalyticsTools Contributors" }]
keywords = ["analytics", "data", "visualization", "bootstrapping", "tokenization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
dat = "data_analytics_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analytics_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["data_analytics_tools"]

[tool.coverage.report]
show_missing = true
fail_under = 80
